--- a/rebar.config
+++ b/rebar.config
@@ -3,9 +3,11 @@
             {lager_truncation_size, 1024}]}.
 {deps, [
         lager,
-        {mnesia_rocksdb, {git, "https://gitlab.com/arknode.io/mnesia_rocksdb.git", {tag, "1.0.0"}}},
+        {mnesia_rocksdb, {pkg, tivan_rocksdb}},
         {uuid, {pkg, uuid_erl}}
        ]}.
+
+{plugins, [rebar3_hex]}.
 
 {shell, [
     {apps, [tivan]}
